[package]
name = "nft_marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token", "mint"] }

[features]
no-entrypoint = []
idl-build = ["anchor-spl/idl-build"]
default = []


[profile.release]
overflow-checks = true
